--- a/Notes/notes.tex
+++ b/Notes/notes.tex
@@ -16,6 +16,7 @@
 
 \pagenumbering{roman}
 \tableofcontents
+\listoffigures
 \newpage
 
 
@@ -25,6 +26,8 @@
 \renewcommand{\chaptermark}[1]{\markboth{\chaptername\ \thechapter\ (#1)}{}}
 \setcounter{chapter}{26}
 \subfile{Chapter27/Chapter27.tex}
+
+\printbibliography[heading=bibintoc]
 
 
 
