--- a/main.bib
+++ b/main.bib
@@ -5,3 +5,19 @@
     url       = {https://github.com/shadypuck/PHYS13300Notes/blob/master/Notes/notes.pdf},
     urldate   = {2022-01-11}
 }
+
+@book{bib:McQuarrieSimon,
+    title     = {Physical Chemistry: A Molecular Approach},
+    author    = {Donald Allen McQuarrie and John Douglas Simon},
+    publisher = {University Science Books},
+    year         = {1997},
+    address      = {55D Gate Five Road, Sausalito, CA 94965}
+}
+
+@online{bib:APChemNotes,
+    title     = {{AP Chemistry} Notes},
+    author    = {Steven Labalme},
+    year      = {2021},
+    url       = {https://github.com/shadypuck/APChemNotes/blob/master/main.pdf},
+    urldate   = {2022-01-11}
+}
