--- a/preamble.tex
+++ b/preamble.tex
@@ -44,6 +44,7 @@
 \colorlet{ret}{red!80!black!90!orange!30}
 \colorlet{grx}{green!50!black!90!yellow!80}
 \colorlet{gry}{green!50!black!90!yellow!40}
+\colorlet{orx}{orange!80!black!90!yellow!80}
 
 \newcommand{\kB}{k_\text{B}}
 \newcommand{\NA}{N_\text{A}}
