Definitions / Methods of Determination

--- a/Notes/notes.tex
+++ b/Notes/notes.tex
@@ -27,6 +27,8 @@
 \setcounter{chapter}{26}
 \subfile{Chapter27/Chapter27.tex}
 
+\subfile{Chapter28/Chapter28.tex}
+
 \printbibliography[heading=bibintoc]
 
 
