--- a/preamble.tex
+++ b/preamble.tex
@@ -7,10 +7,11 @@
 \usepackage[bottom]{footmisc}
 \usepackage{siunitx}
 \usepackage[style=apa]{biblatex}
+\usepackage{booktabs}
 \usepackage{subcaption,float}
 \usepackage{tikz}
 \usepackage{amsmath,amssymb,amsthm}
-\usepackage{bm,physics,mathtools}
+\usepackage{bm,physics,mathtools,empheq}
 \usepackage{mhchem}
 \usepackage[hidelinks]{hyperref}
 
