--- a/preamble.tex
+++ b/preamble.tex
@@ -55,6 +55,7 @@
 
 \newcommand{\kB}{k_\text{B}}
 \newcommand{\NA}{N_\text{A}}
+\newcommand{\pH}{\text{pH}}
 
 \newcommand{\e}[1][]{\text{e}^{#1}}
 \newcommand{\prb}[1]{\left\langle{#1}\right\rangle}
